<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3C3F41"
    tools:context=".addQuestionActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/comfortaa_bold_"
        android:text="@string/add_question"
        android:textAlignment="center"
        android:textColor="#FDFDFE"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/question_title"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#FBFCFD"
        android:ems="10"
        android:fontFamily="@font/comfortaa_light"
        android:hint="@string/question_title"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="#FDFDFE"
        android:textColorHint="#F1F9FD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/question_details"
        android:layout_width="0dp"
        android:layout_height="78dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#FBFCFD"
        android:ems="10"
        android:fontFamily="@font/comfortaa_light"
        android:gravity="start|top"
        android:hint="@string/add_details"
        android:inputType="textMultiLine"
        android:textColor="#FDFDFE"
        android:textColorHint="#F1F9FD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_title" />

    <EditText
        android:id="@+id/choice1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#FBFCFD"
        android:ems="10"
        android:fontFamily="@font/comfortaa_light"
        android:hint="@string/enter_choice_1"
        android:inputType="textPersonName"
        android:textColor="#FDFDFE"
        android:textColorHint="#F1F9FD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_details" />

    <EditText
        android:id="@+id/choice4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#FBFCFD"
        android:ems="10"
        android:fontFamily="@font/comfortaa_light"
        android:hint="@string/enter_choice_4"
        android:inputType="textPersonName"
        android:textColor="#FDFDFE"
        android:textColorHint="#F1F9FD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choice3" />

    <EditText
        android:id="@+id/choice2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#FAFBFC"
        android:ems="10"
        android:fontFamily="@font/comfortaa_light"
        android:hint="@string/enter_choice_2"
        android:inputType="textPersonName"
        android:textColor="#FDFDFE"
        android:textColorHint="#F1F9FD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choice1" />

    <EditText
        android:id="@+id/choice3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#FBFCFD"
        android:ems="10"
        android:fontFamily="@font/comfortaa_light"
        android:hint="@string/enter_choice_3"
        android:inputType="textPersonName"
        android:textColor="#FDFDFE"
        android:textColorHint="#F1F9FD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choice2" />

    <Button
        android:id="@+id/submitQuestion"
        android:layout_width="216dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="8dp"

        android:background="@drawable/buttons"
        android:shadowColor="#004E4545"
        android:fontFamily="@font/comfortaa_bold_"
        android:text="Submit Question"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choice4" />

</android.support.constraint.ConstraintLayout>